Changed a contrast issue

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -52,7 +52,7 @@ nav a {
 }
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
-    color: #D9D9D9;
+    color: white;
 }
 .button-box {
     text-align: center;
